@@ -53,12 +53,11 @@ case "${1}" in
          mount -n -o mode=0755,nosuid /dev  || failed=1
       fi
 
+      # Copy devices that Udev >= 155 doesn't handle to /dev
+      cp -a /lib/udev/devices/* /dev
+
       ln -s /run/shm /dev/shm
       
-      # Copy the only static device node that Udev >= 155 doesn't
-      # handle to /dev
-      cp -a /lib/udev/devices/null /dev
-
       (exit ${failed})
       evaluate_retval
       exit $failed
