@@ -40,6 +40,11 @@
       <para>2012-05-30</para>
       <itemizedlist>
          <listitem>
+           <para>[bdubbs] - Copy all entries in /lib/udev/devices to 
+           /dev in mountvirtfs. Fixes 
+           <ulink url="&lfs-ticket-root;3102">#3102</ulink>.</para>
+         </listitem>
+         <listitem>
            <para>[matthew] - Correct the location of various package's man
            pages. Fixes <ulink url="&lfs-ticket-root;3097">#3097</ulink>.</para>
          </listitem>
