@@ -1,3 +1,6 @@
+2012-05-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Copy all entries in /lib/udev/devices to /dev in mounvirtfs
+
 2012-05-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove mkdir from mountvirtfs because fs is read only
 
